--- a/src/less/config.less
+++ b/src/less/config.less
@@ -1,6 +1,10 @@
+@default-color: #a0cfff;
+@default-color2: #3a8ee6;
 @primary-color:  blue;
 @error-color: red;
 @info-color:#67c23a;
+
+@black-color: black;
 
 @font-sm:15px;
 @font-md:17px;
