--- a/src/less/config.less
+++ b/src/less/config.less
@@ -3,9 +3,13 @@
 @primary-color:  blue;
 @error-color: red;
 @info-color:#67c23a;
+@border-color:#d3dce6;
 
+@white-color: white;
 @black-color: black;
 
 @font-sm:15px;
 @font-md:17px;
 @font-lg:20px;
+
+@default-font-family-zh: 'Microsoft Yahei';
