--- a/src/css/index.less
+++ b/src/css/index.less
@@ -275,16 +275,17 @@
 
 .ex-fake-radio{
   display: inline-block;
-  border-radius: 50%;
-  border-width: 1px;
   border-style: solid;
+}
+.ex-fake-radio-unchecked{
+  border-width: 1px;
+  border-radius: 50%;
   width: 15px;
   height: 15px;
 }
 .ex-fake-radio-checked{
-  display: inline-block;
+
   border-width: 6px;
-  border-style: solid;
   border-radius: 50%;
   width: 6px;
   height: 6px;
@@ -310,29 +311,58 @@
 //标准的边界样式
 .ex-pre-icon-lg{
   margin-top:6px;
-  margin-left:7px;
+  margin-left:12px;
   width: 40px;
-  height: 41px;
+  height: 40px;
 }
 .ex-pre-icon-sm{
   margin-top:18px;
-  margin-left:8px;
+  margin-left:10px;
   width:20px;
   height: 20px;
 }
 .ex-pre-icon-md{
   margin-top:14px;
-  margin-left:7px;
-  width: 30px;
-  height: 30px;
+  margin-left:10px;
+  width: 27px;
+  height: 27px;
 }
-
-.ex-reserve-sm{
-  padding-left: 22px;
+.ex-pre-reserve{
+  padding-left: 10px;
 }
-.ex-reserve-md{
+.ex-pre-reserve-sm{
+  padding-left: 25px;
+}
+.ex-pre-reserve-md{
   padding-left: 31px;
 }
-.ex-reserve-lg{
-  padding-left: 41px;
+.ex-pre-reserve-lg{
+  padding-left: 46px;
+}
+
+
+.ex-suf-icon{
+  position: relative;
+  background-color: @white-color;
+  background-repeat: no-repeat;
+
+}
+
+.ex-suf-icon-lg{
+  right: 60px;
+  top: 15px;
+  width: 40px;
+  height: 41px;
+}
+.ex-suf-icon-sm{
+  right: 34px;
+  top: 5px;
+  width:20px;
+  height: 20px;
+}
+.ex-suf-icon-md{
+  right: 50px;
+  top: 10px;
+  width: 30px;
+  height: 30px;
 }
