--- a/src/css/index.less
+++ b/src/css/index.less
@@ -28,7 +28,7 @@
 }
 
 .ex-button-default:disabled{
-  background-color: @white-color;
+  background-color: @border-color;
   color: lighten(@default-color,10%)
 }
 
@@ -111,7 +111,7 @@
   min-width: 100px;
 }
 .ex-button{
-  margin: 8px;
+  margin: 5px;
   border-radius: 8px;
   border-style:solid;
   border-width:1px;
@@ -242,7 +242,9 @@
 
 
 .ex-input{
-  margin: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 6px;
   border: 1px solid @border-color;
   border-radius: 10px;
   outline: 0;
@@ -258,7 +260,7 @@
 }
 .ex-input-sm{
   height: 20px;
-  width: 100px;
+  width: 80px;
   font-size: @font-sm;
 }
 
@@ -269,7 +271,7 @@
 }
 .ex-input-lg{
   height: 40px;
-  width: 200px;
+  width: 240px;
   font-size: @font-lg;
 }
 
@@ -277,8 +279,11 @@
   display: inline-block;
   border-style: solid;
 }
+.ex-fake-radio:hover{
+  cursor: pointer;
+}
 .ex-fake-radio-unchecked{
-  border-width: 1px;
+  border:1px solid ;
   border-radius: 50%;
   width: 15px;
   height: 15px;
@@ -294,7 +299,7 @@
   border-color: @default-color;
 }
 .ex-fake-radio-primary{
-  border-style: @primary-color;
+  border-color: @primary-color;
 }
 
 .ex-fake-radio-error{
@@ -304,42 +309,65 @@
   border-color: @info-color;
 }
 .ex-pre-icon{
-  position: absolute;
+  position: relative;
   background-color:white;
   background-repeat: no-repeat;
 }
 //标准的边界样式
 .ex-pre-icon-lg{
-  margin-top:6px;
-  margin-left:12px;
-  width: 40px;
-  height: 40px;
+  top: 15px;
+  left: 6px;
 }
 .ex-pre-icon-sm{
-  margin-top:18px;
-  margin-left:10px;
-  width:20px;
-  height: 20px;
+  left: 9px;
+  top: 5px;
 }
 .ex-pre-icon-md{
-  margin-top:14px;
-  margin-left:10px;
-  width: 27px;
-  height: 27px;
+  top: 8px;
+  left: 8px;
 }
-.ex-pre-reserve{
-  padding-left: 10px;
+.ex-reserve{
+
+}
+.ex-suf-reserve-sm{
+  padding-right: 25px;
+  margin-right: -25px;
+}
+.ex-suf-reserve-md{
+  padding-right: 35px;
+  margin-right: -35px;
+}
+.ex-suf-reserve-lg{
+  padding-right: 55px;
+  margin-right: -55px;
 }
 .ex-pre-reserve-sm{
+  margin-left: -20px ;
   padding-left: 25px;
 }
 .ex-pre-reserve-md{
-  padding-left: 31px;
+  margin-left: -30px ;
+  padding-left: 35px;
+
 }
 .ex-pre-reserve-lg{
-  padding-left: 46px;
+  margin-left: -45px ;
+
+  padding-left: 50px;
 }
 
+.ex-icon-sm{
+  width: 20px;
+  height: 20px;
+}
+.ex-icon-md{
+  width: 27px;
+  height: 27px;
+}
+.ex-icon-lg{
+  width: 41px;
+  height: 42px;
+}
 
 .ex-suf-icon{
   position: relative;
@@ -349,20 +377,110 @@
 }
 
 .ex-suf-icon-lg{
-  right: 60px;
-  top: 15px;
-  width: 40px;
-  height: 41px;
+  right: 0;
+  top: 14px;
 }
 .ex-suf-icon-sm{
-  right: 34px;
+  right: 3px;
   top: 5px;
-  width:20px;
-  height: 20px;
+
 }
 .ex-suf-icon-md{
-  right: 50px;
-  top: 10px;
-  width: 30px;
-  height: 30px;
+  top: 9px;
+}
+.ex-pre-button-sm{
+  top: -2px;
+  height: 25px;
+  left: 16px;
+}
+.ex-pre-button-md{
+  top: -2px;
+  height: 37px;
+  left: 16px;
+}
+.ex-pre-button-lg{
+  height: 50px;
+  top: -5px;
+  left: 18px;
+
+}
+.ex-pre-button{
+  margin-left: -12px;
+  border-bottom-left-radius: 15px;
+  border-top-left-radius: 10px;
+  border-style:solid;
+  border-width:1px;
+  border-color:@border-color;
+  color: @border-color;
+  position: relative;
+  vertical-align: middle;
+}
+.ex-suf-button{
+  margin-left: -12px;
+  border-bottom-right-radius: 15px;
+  border-top-right-radius: 10px;
+  border-style:solid;
+  border-width:1px;
+  border-color:@border-color;
+  color: @border-color;
+  position: relative;
+  vertical-align: middle;
+}
+.ex-suf-button-sm{
+  left: -5px;
+  height: 27px;
+  top: -2px;
+}
+.ex-suf-button-md{
+  left: -6px;
+  height: 37px;
+  top: -1px;
+}
+.ex-suf-button-lg{
+  left: -7px;
+  height: 50px;
+  top: -5px;
+}
+
+.ex-slider-button{
+  outline: none;
+  border-radius: 50%;
+  padding:10px;
+  position: relative;
+  top: -25px;
+
+  background: @default-color;
+  border: 1px solid @border-color;
+
+}
+.ex-slider-button:hover{
+  outline: none;
+  border-radius: 50%;
+  padding: 10px;
+  position: relative;
+  top: -25px;
+  left: 0;
+}
+.ex-slider-button-default{
+  background: @default-color;
+}
+.ex-slider-button-default:hover{
+  background: @default-color2;
+}
+.ex-slider-button-error{
+  background: @error-color;
+}
+.ex-slider-button-error:hover{
+  background: lighten(@error-color,20%);
+}.ex-slider-button-info{
+   background: @info-color;
+ }
+.ex-slider-button-info:hover{
+  background: lighten(@info-color,20%);
+}
+.ex-slider-button-primary{
+  background: @primary-color;
+}
+.ex-slider-button-primary:hover{
+  background: lighten(@primary-color,20%);
 }
