有些@不是全都有的

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -447,9 +447,6 @@
   border-radius: 50%;
   padding:10px;
   position: relative;
-  top: -25px;
-
-
   background: @default-color;
   border: 1px solid @border-color;
 
@@ -457,10 +454,11 @@
 .ex-slider-button:hover{
   outline: none;
   border-radius: 50%;
-  padding: 10px;
+  padding-left: 10px;
   position: relative;
-  top: -25px;
   left: 0;
+  background: @default-color;
+  border: 1px solid @border-color;
 }
 .ex-slider-button-default{
   background: @default-color;
