--- a/src/less/config.less
+++ b/src/less/config.less
@@ -4,7 +4,7 @@
 @error-color: red;
 @info-color:#67c23a;
 @border-color:#d3dce6;
-
+@border-color2:#d3dce6;
 @white-color: white;
 @black-color: black;
 
@@ -13,3 +13,4 @@
 @font-lg:20px;
 
 @default-font-family-zh: 'Microsoft Yahei';
+@default-font-family-en: 'Microsoft Yahei';
