完成了fade指令

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -220,9 +220,8 @@
   cursor: pointer;
 }
 .div-row{
-  display: inline;
+  display: inline-block;
 }
-
 .ex-hr{
   border: 3px solid;
   border-radius: 10px;
@@ -318,46 +317,38 @@
   background-color:white;
   background-repeat: no-repeat;
 }
-//标准的边界样式
 .ex-pre-icon-lg{
   top: 15px;
-  left: 6px;
+  left: -310px;
 }
 .ex-pre-icon-sm{
-  left: 9px;
   top: 5px;
+  left: -120px;
 }
 .ex-pre-icon-md{
   top: 8px;
-  left: 8px;
+  left: -200px;
 }
 .ex-reserve{
 
 }
 .ex-suf-reserve-sm{
   padding-right: 25px;
-  margin-right: -25px;
 }
 .ex-suf-reserve-md{
   padding-right: 35px;
-  margin-right: -35px;
 }
 .ex-suf-reserve-lg{
   padding-right: 55px;
-  margin-right: -55px;
 }
 .ex-pre-reserve-sm{
-  margin-left: -20px ;
   padding-left: 25px;
 }
 .ex-pre-reserve-md{
-  margin-left: -30px ;
   padding-left: 35px;
 
 }
 .ex-pre-reserve-lg{
-  margin-left: -50px ;
-
   padding-left: 55px;
 }
 
@@ -382,15 +373,16 @@
 }
 
 .ex-suf-icon-lg{
-  right: 0;
+  right: 56px;
   top: 14px;
 }
 .ex-suf-icon-sm{
-  right: 3px;
-  top: 5px;
+  right: 35px;
+  top: 4px;
 
 }
 .ex-suf-icon-md{
+  right: 45px;
   top: 9px;
 }
 .ex-pre-button-sm{
