--- a/src/css/index.less
+++ b/src/css/index.less
@@ -388,17 +388,17 @@
 .ex-pre-button-sm{
   top: -2px;
   height: 25px;
-  left: 16px;
+  left: -120px;
 }
 .ex-pre-button-md{
   top: -2px;
   height: 37px;
-  left: 16px;
+  left: -200px;
 }
 .ex-pre-button-lg{
   height: 50px;
   top: -5px;
-  left: 18px;
+  left: -310px;
 
 }
 .ex-pre-button{
@@ -424,17 +424,17 @@
   vertical-align: middle;
 }
 .ex-suf-button-sm{
-  left: -5px;
+  left: -30px;
   height: 27px;
   top: -2px;
 }
 .ex-suf-button-md{
-  left: -6px;
+  left: -35px;
   height: 37px;
   top: -1px;
 }
 .ex-suf-button-lg{
-  left: -7px;
+  left: -50px;
   height: 50px;
   top: -5px;
 }
@@ -493,4 +493,13 @@
   -moz-user-select:none;
   -ms-user-select:none;
   user-select:none;
+}
+.ex-tooltip{
+  background: black;
+  height:100%;
+  width:200px;
+  color: white;
+  padding: 10px;
+  border-radius: 20px;
+  z-index: 1;
 }
