完成了fade指令

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -373,16 +373,16 @@
 }
 
 .ex-suf-icon-lg{
-  right: 56px;
+  right: 15%;
   top: 14px;
 }
 .ex-suf-icon-sm{
-  right: 35px;
+  right: 25%;
   top: 4px;
 
 }
 .ex-suf-icon-md{
-  right: 45px;
+  right: 20%;
   top: 9px;
 }
 .ex-pre-button-sm{
@@ -424,17 +424,17 @@
   vertical-align: middle;
 }
 .ex-suf-button-sm{
-  left: -30px;
+  left: -20%;
   height: 27px;
   top: -2px;
 }
 .ex-suf-button-md{
-  left: -35px;
+  left: -15%;
   height: 37px;
   top: -1px;
 }
 .ex-suf-button-lg{
-  left: -50px;
+  left: -14%;
   height: 50px;
   top: -5px;
 }
@@ -495,11 +495,16 @@
   user-select:none;
 }
 .ex-tooltip{
+  display: inline-block;
   background: black;
-  height:100%;
   width:200px;
   color: white;
   padding: 10px;
   border-radius: 20px;
+  position: absolute;
   z-index: 1;
+}
+
+.ex-componentTip{
+  display: inline-block;
 }
